<resources>
    <string name="app_name">springboot-project-front</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="enter_product_quantity">Enter product quantity</string>
    <string name="cancel">Cancel</string>
    <string name="name">name</string>
    <string name="description">description</string>
    <string name="price">price</string>
    <string name="count">count</string>
    <string name="quantity">quantity</string>
    <string name="create_product">Create Product</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_if_you_don_t_have_an_account">Register, if you don\'t have an account</string>
    <string name="register">Register</string>
    <string name="sporting_goods">Sporting Goods</string>
    <string name="logout">logout</string>
</resources>